New entries should be added at the top

2005-05-17 pcolor optimization, fixed bug in previous pcolor patch - JSWHIT

2005-05-16 Added support for masked arrays in pcolor - JSWHIT

2005-05-13 Added Florent Rougon's Axis set_label1 patch

2005-05-12 Started work on TeX text for antigrain using pngdvi -- see
           examples/tex_demo.py and the new module
           matplotlib.texmanager.  Rotated text not supported and
           rendering small glyps is not working right yet.  BUt large
           fontsizes and/or high dpi saved figs work great.

2005-05-10 New image resize options interpolation options.  New values
           for the interp kwarg are   
        
           'nearest', 'bilinear', 'bicubic', 'spline16', 'spline36',
	   'hanning', 'hamming', 'hermite', 'kaiser', 'quadric',
	   'catrom', 'gaussian', 'bessel', 'mitchell', 'sinc',
	   'lanczos', 'blackman'

           See help(imshow) for details, particularly the
           interpolation, filternorm and filterrad kwargs


2005-05-10 Applied Eric's contour mem leak fixes - JDH

2005-05-10 Extended python agg wrapper and started implementing backend_agg2,
           an agg renderer based on the python wrapper.  This will be
           more flexible and easier to extend than the current
           backend_agg.  See also examples/agg_test.py - JDH

2005-05-09 Added Marcin's no legend patch to exclude lines from the
           autolegend builder

           plot(x, y, label='nolegend')

2005-05-05 Upgraded to agg23

2005-05-05 Added newscalarformatter_demo.py to examples. -DSD 

2005-05-04 Added NewScalarFormatter. Improved formatting of ticklabels, 
           scientific notation, and the ability to plot large large 
           numbers with small ranges, by determining a numerical offset. 
           See ticker.NewScalarFormatter for more details. -DSD 

2005-05-03 Added the option to specify a delimiter in pylab.load -DSD

2005-04-28 Added Darren's line collection example
