@@ -1,9 +1,6 @@
 #!/usr/bin/env python
 
 from pylab import *
-
-rc('text', usetex= True)
-
 figure(1)
 ax = axes([0.1, 0.1, 0.8, 0.7])
 t = arange(0.0, 1.0+0.01, 0.01)
@@ -14,5 +11,5 @@ xlabel('time (s)')
 ylabel('voltage (mV)')
 title(r"\TeX\ is Number $e^{-i\pi}$!", fontsize=30)
 grid(True)
-
+savefig('tex_demo')
 show()
