@@ -769,7 +769,7 @@ def rcdefaults():
 
 _knownBackends = {
     'Agg2':1, 'Agg':1, 'Cairo':1, 'FltkAgg':1, 'GD':1, 'GDK':1, 'GTK':1, 'GTKAgg':1,
-    'GTKCairo':1, 'Paint':1, 'PS':1, 'QtAgg':1, 'SVG':1, 'Template':1,
+    'GTKCairo':1, 'Paint':1, 'PS':1, 'LaTeX':1, 'QtAgg':1, 'SVG':1, 'Template':1,
     'TkAgg':1, 'WX':1, 'WXAgg':1, }
 
 
